fix: section overlapping

--- a/index.css
+++ b/index.css
@@ -300,7 +300,7 @@ ion-icon {
     }
 
     #projects {
-        margin-top: 15rem;
+        margin-top: 20rem;
         margin-bottom: 5rem;
     }
 
@@ -310,7 +310,7 @@ ion-icon {
     }
 
     #contact {
-        margin-top: 20rem;
+        margin-top: 25rem;
         margin-bottom: 20rem;
     }
     #contact > section {
